--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -93,7 +93,7 @@
                 1px 0px rgba(0, 0, 0, 0.8),
                 0px -1px rgba(0, 0, 0, 0.8);
         text-align: center;
-        font-size: 68pt;
+        font-size: 60pt;
         font-weight: 700;
         margin: 0;
     }
@@ -513,7 +513,7 @@
                     </div>
                     <div class="mb-2">
                         <span for="book-img-uploader" class="form-label cursor-default">커버 이미지 선택</span>
-                        <label for="book-img-uploader" id="book-img-uploader-label cursor-pointer" class="ms-1"><i class="bi bi-camera-fill"></i></label>
+                        <label for="book-img-uploader" id="book-img-uploader-label" class="cursor-pointer ms-1"><i class="bi bi-camera-fill"></i></label>
                         <input type="file" id="book-img-uploader" accept="image/*" onchange="setBookCoverPreview()"/>
                         <div class="mt-1 ms-2">
                             <sapn id="select-book-img">선택된 파일이 없습니다.</sapn>
@@ -1559,6 +1559,10 @@
             reader.readAsDataURL(file);
             $('#select-book-img').html(file.name);
             $('#book-img-delete-btn').show();
+
+            setTimeout(function (){
+                $('#book-img-uploader').val('');
+            },500)
         }else {
             return
         }
