리뷰(피드) 페이지 - 댓글 작성 후 갱신 안되는 이슈 해결

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -761,7 +761,7 @@
             contentType: false,
             success: function (response) {
                 alert("리뷰를 등록하였습니다.")
-                changeTab('REVIEW');
+                changeTab('FOLLOW');
             },
             error: function (err) {
                 alert("리뷰 등록에 실패했습니다.")
