--- a/src/main/resources/templates/plan/showplan2.html
+++ b/src/main/resources/templates/plan/showplan2.html
@@ -21,7 +21,6 @@
     <!-- datepicker 는 jquery 1.7.1 이상 bootstrap 2.0.4 이상 버전이 필요함 -->
     <!-- jQuery가 먼저 로드 된 후 datepicker가 로드 되어야함.-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_blue.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/ko.js"></script>
     <title>Title</title>
@@ -181,7 +180,17 @@
             box-shadow: none !important;
             outline-width: 0;
         }
+
+        .input-daterange {
+            display: flex !important;
+            flex-direction: column !important;
+            align-items: center !important;
+        }
+        input[name="plannerName"] {
+            width: 308px;
+        }
     </style>
+    <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/material_blue.css">
 </head>
 <body>
 <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf"></script>
@@ -1243,9 +1252,9 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="flex-sm-row flex-column d-flex">
+                <div class="flex-sm-row flex-column d-flex justify-content-center">
                     <div class="col-sm-9 col-12 px-0 mb-2">
-                        <div class="input-group input-daterange">
+                        <div class="input-daterange">
                             <input id="days" name="days" type="date" class="form-control" th:placeholder="${startDateString} + ' ~ ' + ${endDateString}">
                             <i class="bi bi-calendar fa-1"></i>
                         </div>
