[수정] 페이지 타이틀 수정

--- a/src/main/resources/templates/board/bbs.html
+++ b/src/main/resources/templates/board/bbs.html
@@ -16,7 +16,7 @@
     <link href="assets/css/style.css?after" rel="stylesheet"/>
     <link href="assets/css/commonstyle.css?after" rel="stylesheet"/>
 
-    <title>Three Go</title>
+    <title>둘레둘레</title>
 </head>
 <body>
 
