--- a/src/main/resources/templates/mypage/notfounduser.html
+++ b/src/main/resources/templates/mypage/notfounduser.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>둘레둘레</title>
 </head>
 <body>
   <h1>유저 정보를 찾을 수 없습니다.</h1>
