--- a/src/main/resources/templates/review/editreview.html
+++ b/src/main/resources/templates/review/editreview.html
@@ -20,7 +20,7 @@
     <link href="../../assets/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <script src="../../assets/swiper/swiper-bundle.min.js"></script>
 
-    <title>Three Go</title>
+    <title>둘레둘레</title>
 
     <style>
         .container .row {
