--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -26,7 +26,7 @@
     <!--  review 적용 템플릿 스타일 시트  -->
     <link href="../assets/css/reviewviewer.css" rel="stylesheet"/>
 
-    <title>Title</title>
+    <title>둘레둘레</title>
 
     <style>
         .feed-container {
