--- a/src/main/resources/templates/tourinfo/area.html
+++ b/src/main/resources/templates/tourinfo/area.html
@@ -13,7 +13,7 @@
     <link href="../../assets/css/commonstyle.css" rel="stylesheet" />
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <title>관광지 정보 | 3GO</title>
+    <title>관광지 정보 | 둘레둘레</title>
     <style>
         .main{
             width: 100%;
