--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
     <!--swiper-->
     <link href="assets/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <script src="assets/swiper/swiper-bundle.min.js"></script>
-    <title>Three Go</title>
+    <title>둘레둘레</title>
 </head>
 <body>
 <!-- header-->
