--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -29,7 +29,7 @@
     <link href="../assets/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <script src="../assets/swiper/swiper-bundle.min.js"></script>
 
-    <title>Three Go</title>
+    <title>둘레둘레</title>
 </head>
 <body>
 <style>
