--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -23,7 +23,7 @@
     <!--  review 적용 템플릿 스타일 시트  -->
     <link href="../assets/css/reviewviewer.css" rel="stylesheet"/>
 
-    <title>Three Go</title>
+    <title>둘레둘레</title>
 
     <style>
         .container {
