[수정] 사이드바 수정

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -44,7 +44,7 @@
 <th:block th:fragment="sidebarFragment">
     <div class="sidebar-color position-fixed d-flex flex-column align-items-start flex-shrink-0 p-3 bg-body-tertiary justify-content-center"
          style="width: 280px; height: 100vh">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <a href="/" class="d-flex justify-content-center align-items-center mb-3 mb-md-0 link-body-emphasis text-decoration-none">
             <span class="fs-4 text-center">둘레둘레</span>
         </a>
         <hr>
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li>
-                <a href="/search" class="nav-link py-2 border-bottom">
+                <a href="/search" class="nav-link-act nav-link py-2 border-bottom">
                     <i class="bi bi-columns icon"></i>
                     검색
                 </a>
