리뷰북 - 커버이미지 수정 불가 이슈 해결

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1566,12 +1566,14 @@
     })
 
     const bookFileInput = $('#book-img-uploader')[0];
+    let bookCoverImg = null;
 
     function setBookCoverPreview(){
         let files = bookFileInput.files;
 
         if(files.length > 0){
             let file = files[0];
+            bookCoverImg = file;
 
             let reader = new FileReader();
 
@@ -1597,9 +1599,11 @@
         $('#book-img-delete-btn').hide();
         let files = bookFileInput.files;
         files.length = 0;
+        bookCoverImg = null;
     }
 
     function resetBookEditor() {
+        bookCoverImg = null;
         deleteBookCoverImg()
         $('#book-select-planner').html('<option value="hint" class="select-hint" selected>리뷰북에 기록할 여행일정을 선택하세요.</option>');
         $('#book-title').val('');
@@ -1655,7 +1659,7 @@
         const plannerId = $("#book-select-planner option:selected").val();
         const bookTitle = $("#book-title").val();
         const bookContent = $("#book-contents").val();
-        const coverFile = bookFileInput.files[0];
+        const coverFile = bookCoverImg;
 
         if(plannerId === 'hint') {
             alert("여행일정을 선택해주세요.");
