검색 중앙정렬 및 사진 추가

--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -51,13 +51,14 @@
         }
 
         .search-prompt {
-            margin-top: calc(50vh - 175px) !important;
+            margin-top: calc(50vh - 220px) !important;
         }
 
         .search-prompt > img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
+            width: max-content;
+            /*height: 150px;*/
+            height: max-content;
+            /*object-fit: cover;*/
         }
     </style>
 </head>
@@ -69,7 +70,7 @@
         <div class="d-flex flex-column">
             <div class="search-content gallery">
                 <div class="search-prompt text-center">
-                    <img src="../assets/img/search.png" alt="검색 유도 이미지" class="img-fluid mb-3">
+                    <img src="../assets/img/search1.png" alt="검색 유도 이미지" class="img-fluid mb-3">
                     <h2>찾고 싶은 리뷰나 유저를 검색해보세요!</h2>
                     <p>예: "오션뷰", "맛집", "사용자 이름"</p>
                 </div>
