[수정] 사이드바 및 프론트 수정

--- a/src/main/resources/templates/plan/calendar.html
+++ b/src/main/resources/templates/plan/calendar.html
@@ -165,7 +165,7 @@
     <div class="container mt-5" th:if="${plannerList.size() > 0 || sharedPlannerList.size() > 0}">
 
         <div class="text-center mb-5">
-            <h2 class="display-6 text-center">등록한 여행일정을 확인해보세요.</h2>
+            <h2>등록한 여행일정을 확인해보세요.</h2>
         </div>
 
         <div class="mb-5">
